tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__bash_shell_integration_hint_suppressed.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
✅ ✅ [32mCreated new worktree for [1m[32mbash-test[0m[32m from [1m[32mmain[0m[32m: [1m[32m[TMPDIR]/test-repo.bash-test[0m[0m
