tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__fish_wrapper_handles_empty_chunks.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
✅ [32mCreated new worktree for [1m[32mfish-minimal[0m[32m from [1m[32mmain[0m[32m: [1m[32m[TMPDIR]/test-repo.fish-minimal[0m[0m
